# python-code-data

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  asv.conf.json  pyproject.toml  requirements.docs.txt  requirements.in  requirements.test.txt  requirements.txt
.github/workflows/: codeql-analysis.yml  release.yml  test.yml
benchmarks/: benchmarks.py
binder/: requirements.txt
code_data/: __init__.py  _args.py  _blocks.py  _cli.py  _code_data.py  _constants.py  _flags_data.py  _flags_data_test.py  _json_data.py  _line_mapping.py  _line_mapping_test.py  _normalize.py  _test.py  _test_cli.py  _test_modules.py  _test_verify_code.py  args.py  blocks.py  cli.py  code_data.py  code_data_test.py  constants.py  control_flow_graph.py  dataclass_hide_default.py  flags_data.py  flags_data_test.py  instruction_data.py  line_mapping.py  line_mapping_test.py  line_table.py  line_table_test.py  module_codes.py  normalize.py  test.py  test_modules.py  test_verify_code.py
code_data/_test_minimized/: astroid.brain.brain_numpy_ndarray.py  asyncore.py  flit_core.vendor.tomli._types.py  generated_example.py  gitdb.const.py  ipykernel.tests.test_message_spec.py  lib2to3.fixes.fix_itertools_imports.py  pip._vendor.pep517.build.py  pygments.formatters.irc.py  sphinx_comments.py  test.test_float.py  test.test_json.test_scanstring.py  test.test_posix.py  test.test_unary.py  virtualenv.util.path._pathlib.py  zmq.tests.test_ioloop.py
code_data/code_data_test_minimized/: README.md  appnope._dummy.py  bytecode.tests.long_lines_example.py  json.scanner.py  pre_commit.languages.r.py  setuptools.config.py
code_data/test_minimized/: ensurepip.__main__.py  hypothesis.internal.floats.py  identify.interpreters.py  idlelib.idle_test.test_hyperparser.py  jedi.plugins.py  libcst.tests.test_tabs.py  notebook.tests.test_config_manager.py  pip._vendor.rich.color.py  pip._vendor.rich.pretty.py  prompt_toolkit.styles.named_colors.py  setuptools._vendor.more_itertools.more.py  sphinx.ext.autodoc.importer.py  sphinx.util.typing.py  test.test_grammar.py  test.test_positional_only_arg.py  turtledemo.minimal_hanoi.py  unittest.test.testmock.testhelpers.py
docs/: CHANGELOG.md  _config.yml  _toc.yml  api.md  background.md  conf.py  design.md  development.md  example_analyze.md  example_function_types.md  example_modify.md  faq.md  intro.md  learnings.md  usage.md
examples/: args_functions.py  count_duplicates.py  count_names.py  nlocal.py
scripts/: additional_freevars.py  args_functions.py  count_duplicates.py  freevars_not_optimized.py  out_of_place_cellvars.py  profile.py
