[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "code_data"
authors = [
    {name = "Saul Shanabrook", email = "s.shanabrook@gmail.com"}
]
readme = "README.md"
dependencies = ["rich"]
dynamic = ["version", "description"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Documentation = "https://flit.readthedocs.io/en/latest/"
Source = "https://github.com/metadsl/python-code-data"

[project.optional-dependencies]
test = [
    "pytest>=3.6.0",
    "pytest-xdist",
    "hypothesmith",
    "mypy",
    "pre-commit"
]

docs = [
    "jupyter-book",
    "sphinx-autoapi",
    "sphinx-autodoc-typehints"
]

[project.scripts]
python-code-data = "code_data.cli:main"