[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "code_data"
authors = [
    {name = "Saul Shanabrook", email = "s.shanabrook@gmail.com"}
]
readme = "README.md"
dependencies = []
dynamic = ["version", "description"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Documentation = "https://python-code-data.readthedocs.io/en/latest/"
Source = "https://github.com/metadsl/python-code-data"

[project.optional-dependencies]

rich = [
    "rich"
]

# TODO: in the future don't include dev deps and generate from pre-commit
# into requirements.txt
dev = [
    "pre-commit",
    "black",
    "mypy",
    "flake8",
    "isort",
]

test = [
    "pytest>=3.6.0",
    "hypothesmith",
    "jsonschema"
]

docs = [
    "jupyter-book"
]

[project.scripts]
python-code-data = "code_data._cli:main"

[tool.black]
extend-exclude = '(docs/conf\.py)|(code_data/_test_minimized/.*)'

[tool.isort]
profile = "black"
skip_gitignore = true
extend_skip_glob = ["*/_test_minimized/*"]

[tool.pytest.ini_options]
addopts = ["--doctest-modules", "--durations=10"]
norecursedirs = "_test_minimized"
python_files = ["*test*.py"]


[tool.mypy]
ignore_missing_imports = true
warn_redundant_casts = true
check_untyped_defs = true
strict_equality = true
warn_unused_configs = true
exclude = [
  '^docs/conf\.py$',
  '^scripts/.*'
]


[tool.conda-lock]
channels = [
    'conda-forge', 'defaults'
]